# conscience

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 408219e2f718_add_plan_and_agent_tables.py  b3f1a2c8d945_add_agent_file_table_and_entry_point.py
api/: agent.py  auth.py  conscience.py  plan.py  plans.py
config/: prompts.py  settings.py
core/: app.py
db/: database.py
docs/: agent.md  auth.md  daytona.md  deployment.md  follow-up-questions.md  minimal-plan.md  plan.md  project.md  railway-deployment.md  sandbox.md  validation_loop.md
models/: __init__.py  agent.py  agent_file.py  api.py  environment.py  plan.py
services/: codegen_service.py  plan_service.py  storage_service.py  websocket_service.py
ui/: .env.example  .gitignore  package-lock.json  package.json  proxy.ts
ui/actions/: agent-files.ts  approve-plan.ts  generate-plan.ts  get-agent.ts  get-agents.ts  get-models.ts  get_models.ts  process-input.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/(auth)/sign-in/: page.tsx
ui/app/(auth)/sign-up/: page.tsx
ui/app/auth/callback/: route.ts
ui/app/canvas/: page.tsx
ui/app/oauth/consent/: consent-form.tsx  (+1 more)
ui/app/sign-in/: page.tsx
ui/components/: Header.tsx  MicButton.tsx  sign-out-button.tsx  social-auth-button.tsx
ui/components/canvas/: BaseNode.tsx  OutputNode.tsx  ProcessNode.tsx  Sidebar.tsx  StatusBar.tsx
ui/components/ui/: button.tsx
ui/hooks/: useCodeGenWebSocket.ts  usePlanWebSocket.ts
ui/types/: file-system.ts
utils/: logger.py
(+3 files in other folders)
